# water-trigger

./: .gitignore  CMakeLists.txt  LICENSE  build.py  main.c
core/entity/: bool.h  water_trigger.h
core/usecases/: reply_to_echo.c
include/: connect.h  listener.h  mock_protocol.h  safe_memory.h  sensor.h  trigger.h
src/core/entity/: boolean.h  forward.h
src/core/usecases/: connect_to_local_network.c  detected_water.c  ran_out_of_water.c  reply_to_echo.c  usecases.h
src/infra/: forward.c
tests/: CMakeLists.txt  main.c  run_tests.py
tests/cases/: cases.h  failed_to_connect.c  failed_to_create_echo.c  failed_to_create_sensor.c  success.c
tests/mock/: mock_forward.c
